--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,3 +1,5 @@
 @use "./parciales/header";
 @use "./parciales/estilos_home";
 @use "./parciales/footer";
+@use "./parciales/series";
+@use "./parciales/peliculas";
