--- a/css/estilos.css
+++ b/css/estilos.css
@@ -447,4 +447,15 @@ footer .footer-nav .footer-link {
 }
 footer .footer-nav .footer-link:hover {
   color: var(--primary-color-light);
+}
+
+.mover_img_abajo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.enlace {
+  color: var(--primary-color-light);
 }/*# sourceMappingURL=estilos.css.map */
