--- a/css/estilos.css
+++ b/css/estilos.css
@@ -143,6 +143,33 @@ header .hamburger span {
   font-size: 1.2rem;
 }
 
+/* imagen top 10 */
+.movie-number img {
+  width: 100%;
+  height: 300px;
+}
+
+.movie-item {
+  position: relative;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.movie-poster {
+  position: relative;
+}
+
+.movie-number {
+  position: absolute;
+  top: 0px;
+  z-index: 1; /* Para asegurarte de que el número esté encima de la película */
+}
+
+.movie-number img {
+  width: 60px; /* Ajusta el tamaño según sea necesario */
+  height: 250px;
+}
+
 /* Media Query */
 @media (max-width: 768px) {
   header .hamburger {
