--- a/css/parciales/_estilos_pelis.scss
+++ b/css/parciales/_estilos_pelis.scss
@@ -36,3 +36,9 @@
   border-top-right-radius: 0%;
   border-bottom-right-radius: 0%;
 }
+
+// enlaces
+
+.enlaces{
+  color: var(--primary-color);
+}
