--- a/css/estilos.css
+++ b/css/estilos.css
@@ -583,5 +583,101 @@ footer .footer-nav .footer-link:hover {
 
 .pai-carousel .movie-carousel-item:hover {
   transform: scale(1.05); /* Efecto de escala para hacer más grande */
-  width: 600px; /* Aumentamos el tamaño cuando se pasa el ratón */
+  width: 500px; /* Aumentamos el tamaño cuando se pasa el ratón */
+}
+
+.movie-item img {
+  border-radius: 0%;
+  width: 100%;
+}
+
+.movie-item {
+  position: relative;
+  width: 200px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie-item:hover {
+  transform: scale(1.3);
+}
+
+.movie-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.movie-item:hover .movie-overlay {
+  opacity: 1;
+}
+
+.button-container {
+  display: flex;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.movie-overview {
+  font-size: 14px;
+  color: #bbb;
+  font-weight: 500;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 4.5em;
+  padding: 30px 20px;
+}
+
+.btn:hover {
+  transform: scale(1.3);
+}
+
+.movie-item {
+  flex: 0 0 auto;
+}
+
+.button-container {
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+.button-container .detalles-btn {
+  grid-column: 1/-1;
+  border-radius: 20px;
+  padding: 8px 15px;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+}
+.button-container .fav-btn {
+  background: #ff4d4d;
+  border: none;
+}
+.button-container .add-btn {
+  background: #00fa94;
+  border: none;
+}
+.button-container .play-btn {
+  background: #ffcc00;
+  border: none;
 }/*# sourceMappingURL=estilos.css.map */
