--- a/css/parciales/_estilos_pelis.scss
+++ b/css/parciales/_estilos_pelis.scss
@@ -65,5 +65,116 @@
 
 .pai-carousel .movie-carousel-item:hover {
   transform: scale(1.05);  /* Efecto de escala para hacer más grande */
-  width: 600px;  /* Aumentamos el tamaño cuando se pasa el ratón */
+  width: 500px;  /* Aumentamos el tamaño cuando se pasa el ratón */
+}
+
+
+// carrousel mi lista
+
+
+.movie-item img{
+  border-radius: 0%;
+  width: 100%;
+}
+
+.movie-item {
+  position: relative;
+  width: 200px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie-item:hover {
+  transform: scale(1.3);
+}
+
+.movie-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.movie-item:hover .movie-overlay {
+  opacity: 1;
+}
+
+.button-container {
+  display: flex;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.movie-overview {
+  font-size: 14px;
+  color: #bbb;
+  font-weight: 500;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;  // 🔹 Máximo 3 líneas
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 4.5em;  // 🔹 Limita la altura (1.5em * 3 líneas)
+  padding: 30px 20px;
+}
+
+
+.btn:hover {
+  transform: scale(1.3);
+}
+
+
+.movie-item {
+  flex: 0 0 auto;  // Evita que se encoja
+}
+
+
+
+
+
+.button-container {
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+  gap: 10px;
+  margin-top: 10px;
+
+  .detalles-btn {
+    grid-column: 1 / -1;
+    border-radius: 20px;
+    padding: 8px 15px;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+  }
+  .fav-btn {
+    background: #ff4d4d;
+    border: none;
+  }
+  
+  .add-btn {
+    background: #00fa94;
+    
+    border: none;
+  }
+  
+  .play-btn {
+    background: #ffcc00;
+    
+    border: none;
+  }
 }
