--- a/css/parciales/_estilos_pelis.scss
+++ b/css/parciales/_estilos_pelis.scss
@@ -52,6 +52,8 @@
 
 .enlace {
   color: var(--primary-color-light) !important;
+  font-size: 20px;
+  margin-left: 20px;
 }
 
 
@@ -177,4 +179,14 @@
     
     border: none;
   }
+}
+
+.tituloPrincipal{
+  font-size: 60px;
+  margin-left: 20px;
+}
+
+.titulos{
+  font-size: 40px;
+  margin-left: 20px;
 }
