--- a/css/estilos.css
+++ b/css/estilos.css
@@ -530,7 +530,7 @@ footer .footer-nav .footer-link:hover {
   --btn-negro:#141414;
 }
 
-#movie-top10-container {
+#movie-top10-container, #serie-top10-container, #serie-trending-container {
   overflow: visible !important;
 }
 
@@ -665,7 +665,7 @@ body {
   flex: 0 0 auto;
 }
 
-#movie-lista-container, .movie-carousel-inner {
+#movie-lista-container, .movie-carousel-inner, #serie-trending-container {
   height: 100%;
 }
 
@@ -808,6 +808,49 @@ span {
   color: rgba(0, 0, 0, 0.384);
   -webkit-text-stroke: 3px rgb(255, 255, 255);
   z-index: 3;
+}
+
+.movie-item img {
+  width: 100%;
+}
+
+#serie-trending-container img {
+  width: 100%;
+}
+
+#serie-trending-container {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 15px;
+  scroll-behavior: smooth;
+}
+
+.serie-item {
+  flex: 0 0 auto;
+  position: relative;
+  margin-right: 15px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.serie-item:hover {
+  transform: scale(1.3);
+}
+
+.serie-item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#serie-lista-container {
+  visibility: visible !important;
+  display: block !important;
+  font-size: 1.2em; /* Asegura que sean visibles */
 }
 
 @media (min-width: 768px) {
