--- a/css/parciales/_estilos_pelis.scss
+++ b/css/parciales/_estilos_pelis.scss
@@ -14,7 +14,7 @@
 
 // para que aparezcan visibles las imagenes top 10
 
-#movie-top10-container {
+#movie-top10-container, #serie-top10-container, #serie-trending-container {
   overflow: visible !important;
 }
 
@@ -44,6 +44,8 @@
   transition: opacity 0.3s ease-in-out;
   z-index: 3; 
 }
+
+
 
 .movie-item:hover .movie-overlay {
   opacity: 1;
@@ -153,9 +155,10 @@ body{
   flex: 0 0 auto;
 }
 
-#movie-lista-container, .movie-carousel-inner {
+#movie-lista-container, .movie-carousel-inner, #serie-trending-container {
   height: 100%;
 }
+
 
 
 .movie-carousel-inner, .top10-carousel-inner  {
@@ -299,6 +302,52 @@ span{
   color: rgba(0, 0, 0, 0.384);
   -webkit-text-stroke: 3px rgb(255, 255, 255);
   z-index: 3;
+}
+
+
+// SERIES
+
+
+.movie-item img{
+  width: 100%;
+}
+
+#serie-trending-container img{
+  width: 100%;
+}
+
+#serie-trending-container {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 15px;
+  scroll-behavior: smooth;
+}
+
+.serie-item {
+  flex: 0 0 auto;
+  position: relative;
+  margin-right: 15px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.serie-item:hover {
+  transform: scale(1.3);
+}
+
+.serie-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#serie-lista-container {
+  visibility: visible !important;
+  display: block !important;
+  font-size: 1.2em; /* Asegura que sean visibles */
 }
 
 
