--- a/css/parciales/_estilos_home.scss
+++ b/css/parciales/_estilos_home.scss
@@ -62,7 +62,7 @@ body {
 .carousel {
   position: relative;
   width: 100%;
-  height: 60vh;
+  height: 75vh !important;
   overflow: hidden;
 
   .carousel-inner {
