--- a/css/parciales/_header.scss
+++ b/css/parciales/_header.scss
@@ -1,7 +1,16 @@
 /* Header */
 header {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    background-color: rgba(20, 20, 20, 0.9) !important;
+    padding: 10px 20px !important;
+    z-index: 9999 !important;
+  
     padding: 10px 0;
     background-color: #141414;
+    
   
     .container-header {
       display: grid;
@@ -36,7 +45,7 @@ header {
         top: 70px;
         left: 0;
         width: 100%;
-        background-color: #1e1e1e;
+        background-color: var(--primary-color-light);
         padding: 20px 0;
       }
   
@@ -112,6 +121,7 @@ header {
 
   /* Barra de búsqueda */
 .search-bar {
+  position: fixed !important;top: 60px !important;left: 0 !important;width: 100% !important;background-color: rgba(20, 20, 20, 0.9) !important;padding: 10px 20px !important;z-index: 9999 !important;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -183,7 +193,7 @@ header {
       top: 70px; 
       left: 0;
       width: 100%;
-      background-color: #1e1e1e;
+      background-color: #9e9e9e;
       padding: 20px 0;
       z-index: 9999; 
     }
