--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,13 @@
 @charset "UTF-8";
-
-
 /* Header */
 header {
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background-color: rgba(20, 20, 20, 0.9) !important;
+  padding: 10px 20px !important;
+  z-index: 9999 !important;
   padding: 10px 0;
   background-color: #141414;
   /* Logo */
@@ -36,7 +41,7 @@ header .nav.active {
   top: 70px;
   left: 0;
   width: 100%;
-  background-color: #1e1e1e;
+  background-color: var(--primary-color-light);
   padding: 20px 0;
 }
 header .nav .nav-link {
@@ -97,6 +102,13 @@ header .hamburger span {
 
 /* Barra de búsqueda */
 .search-bar {
+  position: fixed !important;
+  top: 60px !important;
+  left: 0 !important;
+  width: 100% !important;
+  background-color: rgba(20, 20, 20, 0.9) !important;
+  padding: 10px 20px !important;
+  z-index: 9999 !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -161,7 +173,7 @@ header .hamburger span {
     top: 70px;
     left: 0;
     width: 100%;
-    background-color: #1e1e1e;
+    background-color: #9e9e9e;
     padding: 20px 0;
     z-index: 9999;
   }
@@ -245,7 +257,7 @@ body {
 .carousel {
   position: relative;
   width: 100%;
-  height: 75vh;
+  height: 75vh !important;
   overflow: hidden;
 }
 .carousel .carousel-inner {
@@ -540,6 +552,140 @@ footer .footer-nav .footer-link:hover {
   position: relative;
   display: inline-block;
   margin-right: 10px;
+  border-radius: 5%;
+  height: 300px;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie-item:hover {
+  transform: scale(1.3);
+}
+
+/* Superposición para que aparezca la info de las pelis */
+.movie-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  padding: 7px;
+  transition: opacity 0.3s ease-in-out;
+  z-index: 3;
+}
+
+.movie-item:hover .movie-overlay {
+  opacity: 1;
+}
+
+.movie-item img {
+  border-radius: 5%;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* botones en cada película */
+.button-container {
+  display: flex;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.fav-btn {
+  background: #ff4d4d;
+  border: none;
+}
+
+.add-btn {
+  background: #00fa94;
+  border: none;
+}
+
+.play-btn {
+  background: #ffcc00;
+  border: none;
+}
+
+body {
+  background-color: var(--btn-negro);
+}
+
+/* Cont películas y series */
+#movie-lista-container, #serie-trending-container {
+  height: 100%;
+}
+
+.movie-carousel-inner {
+  display: flex;
+  gap: 15px;
+  transition: transform 0.5s ease-in-out;
+}
+
+/* Series trending */
+#serie-trending-container {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 15px;
+  scroll-behavior: smooth;
+}
+
+.serie-item {
+  flex: 0 0 auto;
+  position: relative;
+  margin-right: 15px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.serie-item:hover {
+  transform: scale(1.3);
+}
+
+.serie-item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* RESPONSIVE */
+@media (min-width: 768px) {
+  .tituloPrincipal {
+    text-align: left;
+  }
+}
+@media (min-width: 992px) {
+  span {
+    display: inline-block;
+  }
+  .ocultar {
+    display: none;
+  }
+  .aparecer {
+    display: inline-block;
+  }
+}
+#movie-top10-container, #serie-top10-container, #serie-trending-container {
+  overflow: visible !important;
+}
+
+.movie-item {
+  position: relative;
+  display: inline-block;
+  margin-right: 10px;
   border-radius: 15%;
 }
 
@@ -798,7 +944,7 @@ span {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .movie-number {
@@ -846,7 +992,7 @@ span {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 #serie-lista-container {
@@ -869,5 +1015,145 @@ span {
   }
   .aparecer {
     display: inline-block;
+  }
+}
+/*PORTADA*/
+/* Variables */
+:root {
+  --primary-color: #BA90DA;
+  --btn-bg: var(--primary-color);
+  --btn-bg-hover: var(--primary-color-dark);
+}
+
+.portada {
+  position: relative;
+  margin-bottom: 50px;
+}
+.portada__info {
+  display: none;
+  position: absolute;
+  width: 80%;
+  margin: auto;
+}
+.portada__btn {
+  background-color: var(--btn-bg);
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 12px;
+  font-size: 1rem;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+  margin-top: 20px;
+}
+.portada__btn i {
+  font-size: 1.5rem;
+}
+.portada__btn:hover {
+  background-color: var(--primary-color-light);
+  color: white;
+}
+.portada .añadir {
+  border-radius: 60%;
+}
+
+.detalles {
+  width: 80%;
+  margin: auto;
+}
+.detalles__selector {
+  margin-bottom: 50px;
+}
+.detalles a {
+  text-decoration: none;
+  color: white !important;
+}
+
+.nav-link.active {
+  background-color: #BA90DA !important;
+}
+
+.detalles__descripcion {
+  grid-area: descripcion;
+}
+
+.detalles__info {
+  grid-area: info;
+}
+.detalles__info img {
+  width: 8%;
+}
+
+.info {
+  display: flex;
+}
+
+.parte2 {
+  width: 70%;
+}
+
+.trailer {
+  width: 80%;
+  margin: auto;
+}
+.trailer__img {
+  grid-area: trailer__img;
+  width: 50%;
+}
+.trailer__img video {
+  width: 100%;
+}
+.trailer__descripcion {
+  grid-area: trailer__descripcion;
+}
+
+/* Responsive */
+@media (min-width: 992px) {
+  .portada {
+    position: relative;
+  }
+  .portada__info {
+    width: 50%;
+    top: 20%;
+    left: 5%;
+    position: absolute;
+    display: block;
+  }
+  .portada__descripcion {
+    margin-top: 50px;
+  }
+  .portada__img {
+    width: 100%;
+  }
+  .portada__fondo {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(180deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.041));
+  }
+  .añadir {
+    border-radius: 60%;
+  }
+  .info__logo {
+    margin-bottom: 50px;
+  }
+  .info__compose {
+    display: flex;
+    width: 20%;
+  }
+  #contenido-detalles {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "descripcion info";
+  }
+  .trailer {
+    gap: 70px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "trailer__img trailer__descripcion";
   }
 }/*# sourceMappingURL=estilos.css.map */
