--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -3,3 +3,4 @@
 @use "./parciales/footer";
 @use "./parciales/estilos_pelis";
 @use "./parciales/estilos_series";
+@use "./parciales/estilos_detallePeli";
