header arreglao, como lo toqueis os corto la mano c:

--- a/css/parciales/_estilos_series.scss
+++ b/css/parciales/_estilos_series.scss
@@ -45,7 +45,7 @@
   .movie-poster {
     position: relative;
     border-radius: 50%;
-    width: auto; /* Ajusta automáticamente según la imagen */
+    width: auto; 
     height: auto;
   }
   
@@ -368,7 +368,7 @@
   #serie-lista-container {
     visibility: visible !important;
     display: block !important;
-    font-size: 1.2em; /* Asegura que sean visibles */
+    font-size: 1.2em; 
   }
   
   
