--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,15 +1,13 @@
 @charset "UTF-8";
 /* Header */
 header {
-  position: fixed !important;
-  top: 0 !important;
-  left: 0 !important;
-  width: 100% !important;
-  background-color: rgba(20, 20, 20, 0.9) !important;
-  padding: 10px 20px !important;
-  z-index: 9999 !important;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgb(20, 20, 20);
   padding: 10px 0;
-  background-color: #141414;
+  z-index: 9999;
   /* Logo */
   /* Navigation */
   /* Hamburger Menu */
@@ -37,18 +35,20 @@ header .nav.active {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  position: absolute;
-  top: 70px;
+  position: fixed;
+  top: 0;
   left: 0;
   width: 100%;
-  background-color: var(--primary-color-light);
-  padding: 20px 0;
+  height: 100vh;
+  background-color: rgb(20, 20, 20);
+  padding: 50px 0;
+  justify-content: center;
+  align-items: center;
 }
 header .nav .nav-link {
   font-size: 1rem;
   color: var(--text-on-primary);
   font-weight: 500;
-  position: relative;
   transition: color 0.3s;
 }
 header .nav .nav-link:hover {
@@ -56,6 +56,7 @@ header .nav .nav-link:hover {
 }
 header .nav .dropdown {
   position: relative;
+  z-index: 10002;
 }
 header .nav .dropdown .dropdown-toggle::after {
   content: "▼";
@@ -67,17 +68,18 @@ header .nav .dropdown .dropdown-menu {
   position: absolute;
   top: 100%;
   left: 0;
+  width: 200px;
   background-color: #2e2e2e;
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
+  z-index: 10003;
 }
 header .nav .dropdown:hover .dropdown-menu {
   display: block;
 }
 header .nav .dropdown .dropdown-item {
   padding: 10px 15px;
-  color: var(--text-on-primary);
+  color: white;
   display: block;
   font-size: 0.9rem;
   transition: background 0.3s;
@@ -96,24 +98,22 @@ header .hamburger {
 header .hamburger span {
   height: 3px;
   width: 100%;
-  background-color: var(--text-on-primary);
+  background-color: white;
   transition: 0.3s;
 }
 
-/* Barra de búsqueda */
+/* Search Bar */
 .search-bar {
-  position: fixed !important;
-  top: 60px !important;
-  left: 0 !important;
-  width: 100% !important;
-  background-color: rgba(20, 20, 20, 0.9) !important;
-  padding: 10px 20px !important;
-  z-index: 9999 !important;
+  position: fixed;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  background-color: rgb(20, 20, 20);
+  padding: 10px 20px;
+  z-index: 9998;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px 20px;
-  background-color: #2e2e2e;
   gap: 10px;
 }
 .search-bar .search-input {
@@ -123,10 +123,9 @@ header .hamburger span {
   border-radius: 15px;
   border: 1px solid #444;
   font-size: 1rem;
-  color: var(--text-on-primary);
   background-color: #747474;
+  color: var(--text-on-primary);
   outline: none;
-  transition: border-color 0.3s;
 }
 .search-bar .search-input::-moz-placeholder {
   color: #000000;
@@ -134,13 +133,7 @@ header .hamburger span {
 .search-bar .search-input::placeholder {
   color: #000000;
 }
-.search-bar .search-input:focus {
-  border-color: var(--primary-color-light);
-}
 .search-bar .search-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   padding: 10px 15px;
   background-color: var(--primary-color);
   color: var(--btn-color);
@@ -148,16 +141,29 @@ header .hamburger span {
   border-radius: 20px;
   cursor: pointer;
   font-size: 1rem;
-  transition: background-color 0.3s;
 }
 .search-bar .search-button:hover {
   background-color: var(--primary-color-dark);
 }
-.search-bar .search-button i {
-  font-size: 1.2rem;
+.search-bar .auth-buttons a {
+  font-size: 1rem;
+  color: var(--text-on-primary);
+  font-weight: 500;
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  transition: background-color 0.3s;
+}
+.search-bar .auth-buttons a:hover {
+  color: var(--text-on-primary);
+}
+.search-bar .auth-buttons .login-link {
+  transition: background-color 0.3s;
+}
+.search-bar .auth-buttons .login-link:hover {
+  background-color: #8e44ad;
 }
 
-/* Media Query */
 @media (max-width: 768px) {
   header .hamburger {
     display: flex;
@@ -167,35 +173,8 @@ header .hamburger span {
   }
   .nav.active {
     display: flex;
-    flex-direction: column;
-    gap: 15px;
-    position: absolute;
-    top: 70px;
-    left: 0;
-    width: 100%;
-    background-color: #9e9e9e;
-    padding: 20px 0;
-    z-index: 9999;
-  }
-  .search-bar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-  }
-  .search-input {
-    flex: 1;
-    width: auto;
-  }
-  .search-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
   }
 }
-/* General reset */
 *,
 *::before,
 *::after {
@@ -215,7 +194,6 @@ body {
   color: var(--text-on-primary);
 }
 
-/* Variables */
 :root {
   --primary-color: #bb00fa;
   --primary-color-light: #d94dfc;
@@ -227,7 +205,6 @@ body {
   --btn-bg-hover: var(--primary-color-dark);
 }
 
-/* Buttons */
 .auth-buttons {
   display: flex;
   gap: 10px;
@@ -253,7 +230,6 @@ body {
   color: var(--text-on-primary);
 }
 
-/* Carousel */
 .carousel {
   position: relative;
   width: 100%;
@@ -340,7 +316,6 @@ body {
   background-color: var(--primary-color);
 }
 
-/* Movie Carousel */
 .movie-carousel {
   position: relative;
   width: 100%;
@@ -562,7 +537,6 @@ footer .footer-nav .footer-link:hover {
   transform: scale(1.3);
 }
 
-/* Superposición para que aparezca la info de las pelis */
 .movie-overlay {
   position: absolute;
   top: 0;
@@ -594,7 +568,6 @@ footer .footer-nav .footer-link:hover {
      object-fit: cover;
 }
 
-/* botones en cada película */
 .button-container {
   display: flex;
   gap: 15px;
@@ -620,7 +593,6 @@ body {
   background-color: var(--btn-negro);
 }
 
-/* Cont películas y series */
 #movie-lista-container, #serie-trending-container {
   height: 100%;
 }
@@ -720,7 +692,7 @@ body {
 .movie-poster {
   position: relative;
   border-radius: 50%;
-  width: auto; /* Ajusta automáticamente según la imagen */
+  width: auto;
   height: auto;
 }
 
@@ -998,7 +970,7 @@ span {
 #serie-lista-container {
   visibility: visible !important;
   display: block !important;
-  font-size: 1.2em; /* Asegura que sean visibles */
+  font-size: 1.2em;
 }
 
 @media (min-width: 768px) {
@@ -1017,8 +989,6 @@ span {
     display: inline-block;
   }
 }
-/*PORTADA*/
-/* Variables */
 :root {
   --primary-color: #BA90DA;
   --btn-bg: var(--primary-color);
@@ -1109,7 +1079,6 @@ span {
   grid-area: trailer__descripcion;
 }
 
-/* Responsive */
 @media (min-width: 992px) {
   .portada {
     position: relative;
